fixes issues with varriable pulldown not fitting short screens

--- a/resources/scss/_mixins.scss
+++ b/resources/scss/_mixins.scss
@@ -48,6 +48,11 @@
   @media screen and (max-width: 1100px) { @content; }
 }
 
+@mixin short {
+  @media screen and (min-height: 600px) { @content; }
+}
+
+
 @mixin tall {
   @media screen and (min-height: 1000px) { @content; }
 }
