--- a/resources/scss/screen.scss
+++ b/resources/scss/screen.scss
@@ -307,14 +307,16 @@ h6 {
   list-style: none;
   background-color: $ce3-blue5;
   max-height: 400px !important;
+
+  @include short {
+    max-height: 250px !important;
+  }
+
   overflow: auto !important;
   @include border-radius(5px, 5px);
   @include box-shadow(0px 2px 4px transparentize(#000, 0.761));
 
-  // max-width: 500px !important;
-
   @include small {
-    // max-width: unset !important;
     max-height: 250px !important;
     top: 2px;
   }
